# Human_intention

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  manifest.xml  manifest.xml~  markers.rviz  openni_tracker1.xml  openni_tracker1.xml~  righthand.csv~  rosconfig.env  rosconfig.env~
Experimental Results/: README.md
OutputData/: Chair_left.csv  HandMoving_Left_2016-12-12_14:35:49.csv  HandMoving_Left_2016-12-12_14:36:56.csv  HandMoving_Left_2016-12-12_14:37:34.csv  HandMoving_Left_2016-12-12_14:38:47.csv  HandMoving_Left_2016-12-12_14:38:9.csv  HandMoving_Left_2017-7-10_16:27:19.csv  HandMoving_Left_2017-7-24_20:31:0.csv  HandMoving_Left_2017-7-24_20:32:9.csv  HandMoving_Left_2017-7-24_21:31:6.csv  HandMoving_Left_2017-7-24_21:48:28.csv  HandMoving_Left_2017-7-24_21:50:7.csv  HandMoving_Left_2017-7-24_21:53:8.csv  HandMoving_Right_2016-12-12_14:35:49.csv  HandMoving_Right_2016-12-12_14:36:56.csv  HandMoving_Right_2016-12-12_14:37:34.csv  HandMoving_Right_2016-12-12_14:38:47.csv  HandMoving_Right_2016-12-12_14:38:9.csv  HandMoving_Right_2017-7-10_16:27:19.csv  HandMoving_Right_2017-7-24_20:31:0.csv  HandMoving_Right_2017-7-24_20:32:9.csv  HandMoving_Right_2017-7-24_21:31:6.csv  HandMoving_Right_2017-7-24_21:48:28.csv  HandMoving_Right_2017-7-24_21:50:7.csv  HandMoving_Right_2017-7-24_21:53:8.csv  HandNearObj_Left_2016-12-12_14:35:49.csv  HandNearObj_Left_2016-12-12_14:36:56.csv  HandNearObj_Left_2016-12-12_14:37:34.csv  HandNearObj_Left_2016-12-12_14:38:47.csv  HandNearObj_Left_2016-12-12_14:38:9.csv  HandNearObj_Left_2017-7-10_16:27:19.csv  HandNearObj_Left_2017-7-24_20:31:0.csv  HandNearObj_Left_2017-7-24_20:32:9.csv  HandNearObj_Left_2017-7-24_21:31:6.csv  HandNearObj_Left_2017-7-24_21:48:28.csv  HandNearObj_Left_2017-7-24_21:50:7.csv  HandNearObj_Left_2017-7-24_21:53:8.csv  HandNearObj_Right_2016-12-12_14:35:49.csv  HandNearObj_Right_2016-12-12_14:36:56.csv  HandNearObj_Right_2016-12-12_14:37:34.csv  (+70 more)
Train_model/: angular_probability.py  confusion_matrix.py  contour_plot.py  gauss.py  gaussian_distribution.py  interpolate.py  prediction_plot.py  probability_hist.py  probabilty_affordance.py
Train_model/Afforance_Probability/: data_D.csv  data_G.csv  data_M.csv  data_R.csv
Train_model/Aprroximation (Interpolate)/: colums_data_right.csv  sums.csv  sums_right.csv
Train_model/Potential_map/: Chair_left_w.csv  LeftHand_drink_w.csv  RightHand_drink_w.csv  chair_right_w.csv  door_right_w.csv  predict_drink_contour.csv
Train_model/Prediction_accuracy/: Trajectory_LeftHand_2016-12-12_14_35_49_P.csv  Trajectory_LeftHand_2016-12-12_14_36_56.csv  Trajectory_LeftHand_2016-12-12_14_36_56_P.csv  Trajectory_LeftHand_2016-12-12_14_38_9.csv  Trajectory_RightHand_2016-12-12_14_37_34.csv  Trajectory_RightHand_2016-12-12_14_38_47.csv
apriltags/: ArprilHeaderfile
data/: objects_lab10.txt
feature_extraction_package/src/: Drinking_water.cpp~
launch/: human_hand.launch  markers_from_tf.launch~  object.launch  skeletal_tracker.launch  skeletal_tracker.launch~  skeleton.launch  skeleton.launch~
msg_gen/lisp/: EnableJointGroup.lisp  Goal.lisp  Human_intention-msg.asd  Markers.lisp  PerceptInfo.lisp  Pose.lisp  Poses.lisp  Skeleton.lisp  _package.lisp  _package_EnableJointGroup.lisp  _package_Goal.lisp  _package_Markers.lisp  _package_PerceptInfo.lisp  _package_Pose.lisp  _package_Poses.lisp  _package_Skeleton.lisp  skeleton_markers-msg.asd
nodes/: markers_from_openni_tracker.py  markers_from_openni_tracker.py~  markers_from_tf.py  markers_from_tf.py~  skeleton_markers.py  skeleton_markers.py~
params/: SamplesConfig.xml  marker_params.yaml
save/: AcitivityRecognition.cpp  BezierCurve.hpp  BrazierCurve.cpp  CMakeLists.txt  Drinking_water.cpp  KinectController.cpp  KinectController.h  KinectDisplay.cpp  KinectDisplay.h  attention_map.cpp  attention_map.hpp  classification_with_svm.cpp  directional_stat.cpp  find_objects.cpp  find_objects.h  find_objects_color.cpp  find_objects_color.h  find_objects_pcl.cpp  find_objects_pcl.h  kinect_aux_node.cpp  openni_tracker1.cpp  skeleton_tracker.cpp  skeleton_tracker.h  training_with_svm.cpp  trajectory.h  utils.cpp  utils.h  utils.hpp
seekurjr_gazebo/launch/: seekurjr_gazebo.launch
seekurjr_gazebo/urdf/: seekurjr.xacro.xml
src/: AcitivityRecognition.cpp  BrazierCurve.cpp  Drinking_water.cpp~  HandTracker.cpp~  HandTracker.h~  HandViewer.cpp~  HandViewer.h~  Heatmap.cpp~  KinectController.cpp  KinectController.cpp~  KinectController.h  KinectController.h~  KinectDisplay.cpp  KinectDisplay.cpp~  KinectDisplay.h  KinectDisplay.h~  OutputData.h  PointDrawer.cpp~  SimpleViewer.cpp~  attention_map.cpp  attention_map.cpp~  attention_map.hpp  classification_with_svm.cpp  classification_with_svm.cpp~  find_objects.cpp  find_objects.h  find_objects_base.h  find_objects_color.cpp  find_objects_color.h  find_objects_pcl.cpp  find_objects_pcl.h  heatmap.cpp  heatmap.cpp~  jointposition.cpp~  kinect_aux_node.cpp  kinect_aux_node.cpp~  object_detection.cpp~  object_recognition.cpp~  openni_tracker1.cpp~  sample_image_creater.cpp~  (+10 more)
src/Human_intention/msg/: _EnableJointGroup.py  _Goal.py  _PerceptInfo.py  _Pose.py  _Skeleton.py  __init__.py
src/Train_model/: approximation_data.py  beta.py  concatinate_contour.py  example.py  gauss.py  jacobi_theta.py  plot_data.py  potential_map.py  prediction_accuracy.py  prediction_plot.py  probability_hist.py
src/Train_model/Afforance_Probability/: data_G_ch.csv  data_O.csv  data_P.csv  data_P_ch.csv  data_Pa.csv  data_R_ch.csv  prediction.csv
src/Train_model/Aprroximation (Interpolate)/: colums_data.csv
src/Train_model/Potential_map/: LeftHand_drink_w.csv  RightHand_drink.csv  RightHand_drink_w.csv  chair_predict_w.csv  door_left_w.csv  door_predict_w.csv  predict_drink_w.csv
src/Train_model/Prediction_accuracy/: Trajectory_LeftHand_2016-12-12_14_35_49.csv  Trajectory_LeftHand_2016-12-12_14_38_9_P.csv  Trajectory_RightHand_2016-12-12_14_37_34_P.csv  Trajectory_RightHand_2016-12-12_14_38_47_P.csv
src/skeleton_markers/msg/: _EnableJointGroup.py  _Goal.py  _IrTransformMsg.py  _Markers.py  (+13 more)
(+20 files in other folders)
